# narrative-forge

./: .gitignore  README.md  main.py  pyproject.toml
data/: ramayana_metadata.json
docs/: approach_diagram.md  solution_design.md
output/: ramayana_x_silicon_valley.md  ramayana_x_silicon_valley_fifth.md  ramayana_x_silicon_valley_fourth.md  ramayana_x_silicon_valley_second.md  ramayana_x_silicon_valley_seventh.md  ramayana_x_silicon_valley_sixth.md  ramayana_x_silicon_valley_third.md  reimagined_story.md  reimagined_story_eighth_draft.md  reimagined_story_fifth_draft.md  reimagined_story_first_draft.md  reimagined_story_formatted_draft_first.md  reimagined_story_fourth_draft.md  reimagined_story_ninth_draft.md  reimagined_story_second_draft.md  reimagined_story_seventh_draft.md  reimagined_story_sixth_draft.md  reimagined_story_third_draft.md
prompts/: character_mapping.txt  plot_transformation.txt  world_building.md  world_building.txt
schema/: models.py
utils/: assembler.py  extractor.py  geminiclient.py  helpers.py  transformer.py  validator.py
